--- a/index.html
+++ b/index.html
@@ -12,39 +12,60 @@ https://cdn.jsdelivr.net/npm/phosphor-icons@1.4.2/src/index.min.js
   <body>
     <main class="w-full h-screen">
       <header class="flex justify-end p-4">
-        <i class="ph ph-sun cursor-pointer p-2 hover:bg-gray-200 rounded-lg transition-all duration-300"></i>
+        <i
+          onclick="changeTheme()"
+          id="themeIcon"
+          class="ph ph-sun cursor-pointer p-2 hover:bg-gray-200 rounded-lg transition-all duration-300"
+        ></i>
       </header>
       <main class="flex justify-center items-center h-full">
-        <section class="border border-gray-400 rounded-lg p-6 flex justify-center items-center flex-col gap-4">
-            <img src="https://github.com/gabrielangelo0.png" alt="Foto do perfil" class="w-32 h-32 border-4 rounded-full border-gray-300">
+        <section
+          class="border border-gray-400 rounded-lg p-6 flex justify-center items-center flex-col gap-4"
+        >
+          <img
+            src="https://github.com/gabrielangelo0.png"
+            alt="Foto do perfil"
+            class="w-32 h-32 border-4 rounded-full border-gray-300"
+          />
 
-            <h1 class="text-2xl font-bold">Gabriel Angelo</h1>
-            <p class="text-slate-500">Desenvolvedor Full Stack</p>
+          <h1 class="text-2xl font-bold">Gabriel Angelo</h1>
+          <p class="text-slate-500">Desenvolvedor Full Stack</p>
 
-            <section class="flex flex-col gap-3">
-                <button class="border-gray-300 border min-w-96 py-2 rounded-lg">
-                    <a href="" class="w-full h-full flex justify-center items-center gap-5">
-                        <i class="ph ph-instagram-logo text-2xl"></i>
-                        <p>Instagram</p>
-                    </a>
-                </button>
+          <section class="flex flex-col gap-3">
+            <button class="border-gray-300 border min-w-96 py-2 rounded-lg">
+              <a
+                href=""
+                class="w-full h-full flex justify-center items-center gap-5"
+              >
+                <i class="ph ph-instagram-logo text-2xl"></i>
+                <p>Instagram</p>
+              </a>
+            </button>
 
-                <button class="border-gray-300 border min-w-96 py-2 rounded-lg">
-                    <a href="" class="w-full h-full flex justify-center items-center gap-5">
-                        <i class="ph ph-instagram-logo text-2xl"></i>
-                        <p>Instagram</p>
-                    </a>
-                </button>
+            <button class="border-gray-300 border min-w-96 py-2 rounded-lg">
+              <a
+                href=""
+                class="w-full h-full flex justify-center items-center gap-5"
+              >
+                <i class="ph ph-instagram-logo text-2xl"></i>
+                <p>Instagram</p>
+              </a>
+            </button>
 
-                <button class="border-gray-300 border min-w-96 py-2 rounded-lg">
-                    <a href="" class="w-full h-full flex justify-center items-center gap-5">
-                        <i class="ph ph-instagram-logo text-2xl"></i>
-                        <p>Instagram</p>
-                    </a>
-                </button>
-            </section>
+            <button class="border-gray-300 border min-w-96 py-2 rounded-lg">
+              <a
+                href=""
+                class="w-full h-full flex justify-center items-center gap-5"
+              >
+                <i class="ph ph-instagram-logo text-2xl"></i>
+                <p>Instagram</p>
+              </a>
+            </button>
+          </section>
         </section>
       </main>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
